--- a/ScrollTrigger/html/example.html
+++ b/ScrollTrigger/html/example.html
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../css/example2.css">
     <title>Scroll Trigger</title>
 </head>
 <body>
     <div class="container">
         <section class="contenedor__titulo--principal">
-            <h1>Animacion con scroll</h1>
+            <h1 class="title">Animacion con scroll</h1>
         </section>
         <section class="contenedor__imagenes">
-            <img src="./img/carro_1.png" alt="Carro 1" class="imagen_carro1 carro1">
-            <!--<img src="./img/carro_2.png" alt="Carro 2" class="imagen_carro2 carro2">-->
+            <img src="../img/Car1.png" alt="Carro 1" class="imagen_carro1 carro1">
+            <img src="../img/Meta.png" alt="Meta" class="meta">
+            <img src="../img/Car2.png" alt="Carro 2" class="imagen_carro2 carro2">
         </section>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
     
-    <script src="./index.js"></script>
+    <script src="../js/example2.js"></script>
 </body>
 </html>
