--- a/ScrollRocket/index.html
+++ b/ScrollRocket/index.html
@@ -10,12 +10,12 @@
     <section class="contenedor">
         <h1 class="title">Animacion con Scroll</h1>
         <div class="contenedor__animacion">
-            <img src="./img/nave.png" alt="nave" class="nave">
-            <img src="./img.planeta1.png" alt="planeta" class="planeta planeta1">
-            <img src="./img.planeta2.png" alt="planeta" class="planeta planeta2">
-            <img src="./img.planeta3.png" alt="planeta" class="planeta planeta3">
-            <img src="./img.planeta4.png" alt="planeta" class="planeta planeta4">
-            <img src="./img.planeta5.png" alt="planeta" class="planeta planeta5">
+            <img src="./img/rocket.webp" alt="nave" class="nave">
+            <img src="./img/venus.png" alt="planeta" class="planeta planeta1">
+            <img src="./img/saturn.webp" alt="planeta1" class="planeta planeta2">
+            <img src="./img/earth.png" alt="planeta2" class="planeta planeta3">
+            <img src="./img/uranus.webp" alt="planeta3" class="planeta planeta4">
+            <img src="./img/saturn.png" alt="planeta" class="planeta planeta5">
         </div>
     </section>
 </body>
