Adding new cards

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                 <h1>FROM</h1>
                 <div class="Text-Bold"> <label class="Properties">from</label> es una funcion que ejecuta las animaciones de fin a inicio <label class="Properties">recibe el elemnto y un objeto</label></div>
             </div>
+
+            <div class="info card_4">
+                <h1>TIMELINE</h1>
+                <div class="Text-Bold"> <label class="Properties">from</label> es una funcion que crea una linea de tiempo en el que las animaciones se van agregando atravez de metodos<label class="Properties"> to o from</label></div>
+            </div>
+
         </div>
 
     </div>
