First animations and last styles responsives

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">Learning GSAP</h1>
+        <h1 class="title">Learning <label class="Properties">GSAP</label></h1>
         <div class="container__animation">
             <div class="info card_1">
-                <h1>Que es GSAP?</h1>
+                <h1>Que es <label class="Properties">GSAP</label>?</h1>
                 <div class="Text-Bold"> <label class="Properties">GSAP</label> es una libreria de animaciones que hace uso de javascript</div>
             </div>
 
@@ -30,14 +30,19 @@
 
             <div class="info card_4">
                 <h1>TIMELINE</h1>
-                <div class="Text-Bold"> <label class="Properties">from</label> es una funcion que crea una linea de tiempo en el que las animaciones se van agregando atravez de metodos<label class="Properties"> to o from</label></div>
+                <div class="Text-Bold"> <label class="Properties">timeline</label> es una funcion que crea una linea de tiempo en el que las animaciones se van agregando atravez de metodos<label class="Properties"> to o from</label></div>
+            </div>
+
+            <div class="info card_5">
+                <h1>REGISTER PLUGIN</h1>
+                <div class="Text-Bold"> <label class="Properties">register plugin</label> es una funcion que agrega otros plugins de la libreria, recibe<label class="Properties"> plugin</label></div>
             </div>
 
         </div>
 
     </div>
 
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
