--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
     <div class="container">
         <h1 class="title">Learning <label class="Properties">GSAP</label></h1>
-        <div class="container__animation">
             <div class="info card_1">
                 <h1>Que es <label class="Properties">GSAP</label>?</h1>
                 <div class="Text-Bold"> <label class="Properties">GSAP</label> es una libreria de animaciones que hace uso de javascript</div>
@@ -38,11 +37,18 @@
                 <div class="Text-Bold"> <label class="Properties">register plugin</label> es una funcion que agrega otros plugins de la libreria, recibe<label class="Properties"> plugin</label></div>
             </div>
 
-        </div>
+            <div class="carrera">
+                <button class="btn"><p class="p">🏁 Ejemplo Carreras 🚗</p></button>
+            </div>
+
+            <div class="cohete">
+                <button class="btn"><p class="p">🌎 Ejemplo Cohete 🚀</p></button>
+            </div>
+            
 
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
