Adding url in the buttons

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                 <div class="Text-Bold"> <label class="Properties">register plugin</label> es una funcion que agrega otros plugins de la libreria, recibe<label class="Properties"> plugin</label></div>
             </div>
 
-            <div class="carrera">
+            <a href="./ScrollTrigger/html/example.html" class="carrera"> <div>
                 <button class="btn"><p class="p">🏁 Ejemplo Carreras 🚗</p></button>
-            </div>
+            </div></a>
 
-            <div class="cohete">
-                <button class="btn"><p class="p">🌎 Ejemplo Cohete 🚀</p></button>
-            </div>
+            <a href= "./ScrollRocket/index.html"  class="cohete"> <div>
+                <button class="btn"><p class="p">🌎 Ejemplo Cohete 🚀</button>
+            </div></a>
             
 
     </div>
