--- a/ScrollRocket/index.html
+++ b/ScrollRocket/index.html
@@ -9,6 +9,11 @@
 <body>
     <section class="contenedor">
         <h1 class="title">Animacion con Scroll</h1>
+        <section class="inicio">
+            <a href="../../index.html" ><div>
+                <button class="btn"><p class="p">🏠 Inicio</p></button>
+            </div></a>
+        </section>
         <div class="contenedor__animacion">
             <img src="./img/rocket.webp" alt="nave" class="nave">
             <img src="./img/venus.png" alt="planeta" class="planeta planeta1">
