--- a/ScrollTrigger/html/example.html
+++ b/ScrollTrigger/html/example.html
@@ -16,7 +16,7 @@
         </section>
         <section class="inicio">
             <a href="../../index.html" ><div>
-                <button class="btn"><p class="p">Inicio</p></button>
+                <button class="btn"><p class="p">🏠 Inicio</p></button>
             </div></a>
         </section>
         <section class="contenedor__imagenes">
