Change the buttons

--- a/ScrollTrigger/html/example.html
+++ b/ScrollTrigger/html/example.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="../css/example2.css">
     <title>Scroll Trigger</title>
 </head>
-<body>
-    <div class="container">
+<body class="container">
+    <div>
         <section class="contenedor__titulo--principal">
             <h1 class="title">Animacion con scroll</h1>
         </section>
