--- a/ScrollRocket/index.html
+++ b/ScrollRocket/index.html
@@ -10,7 +10,7 @@
     <section class="contenedor">
         <h1 class="title">Animacion con Scroll</h1>
         <section class="inicio">
-            <a href="../../index.html" ><div>
+            <a href="../index.html" ><div>
                 <button class="btn"><p class="p">🏠 Inicio</p></button>
             </div></a>
         </section>
