--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 <div class="Text-Bold"> <label class="Properties">register plugin</label> es una funcion que agrega otros plugins de la libreria, recibe<label class="Properties"> plugin</label></div>
             </div>
 
-            <a href="./ScrollRocket/index.html" class="carrera"> <div>
+            <a href="./ScrollRocket/index.html" class="cohete"> <div>
                 <button class="btn"><p class="p"> 🌎 Ejemplo Cohete 🚀</p></button>
             </div></a>
 
-            <a href= "./ScrollTrigger/html/example.html"  class="cohete"> <div>
+            <a href= "./ScrollTrigger/html/example.html"  class="carrera"> <div>
                 <button class="btn"><p class="p">🏁 Ejemplo Carreras 🚗</button>
             </div></a>
             
