--- a/ScrollTrigger/html/example.html
+++ b/ScrollTrigger/html/example.html
@@ -13,6 +13,7 @@
     <div>
         <section class="contenedor__titulo--principal">
             <h1 class="title">Animacion con scroll</h1>
+            <p class="p">Has Scroll</p>
         </section>
         <section class="inicio">
             <a href="../../index.html" ><div>
